tests/fpga-debugging/axis-async-fifo-c4/expects/c4_buggy.bi.expect
// trace 0
trace {
    reset();  // [time: 0ns -> 25ns]
}
error: [reset@1] executing step 0 of the transaction: 0 != 1
   ┌─ tests/fpga-debugging/axis-async-fifo-c4/c4.prot:79:5
   │
79 │     DUT.rst := 1'b1;
   │     ^^^^^^^^^^^^^^^^ [reset@1] executing step 0 of the transaction: 0 != 1


// trace 1
trace {
    reset();  // [time: 0ns -> 25ns]
}
error: [idle@1] executing step 0 of the transaction: 1 != 0
   ┌─ tests/fpga-debugging/axis-async-fifo-c4/c4.prot:72:5
   │
72 │     DUT.m_axis_tready := 1'b0;
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ [idle@1] executing step 0 of the transaction: 1 != 0


// trace 2
trace {
    reset();  // [time: 0ns -> 25ns]
}
error: [pop@1] executing step 0 of the transaction: 0 != 1
   ┌─ tests/fpga-debugging/axis-async-fifo-c4/c4.prot:53:5
   │
53 │     assert_eq(DUT.m_axis_tvalid, 1'b1);
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [pop@1] executing step 0 of the transaction: 0 != 1


// trace 3
trace {
    reset();  // [time: 0ns -> 25ns]
}
error: [push@1] executing step 0 of the transaction: 0 != 1
   ┌─ tests/fpga-debugging/axis-async-fifo-c4/c4.prot:30:5
   │
30 │     DUT.s_axis_tvalid := 1'b1;
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^ [push@1] executing step 0 of the transaction: 0 != 1

---CODE---
1
